Fix modal spacing

--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -37,7 +37,7 @@
   background-color: white;
   position: sticky;
   top: 0;
-  padding-top: 10px;
+  padding: 10px 0;
 }
 
 .footer {
