--- a/src/components/modal/ModalForm.css
+++ b/src/components/modal/ModalForm.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 20px 10px;
+  margin: 10px 10px 20px 10px;
 }
 
 .body > * {
