--- a/src/components/modal/checkout/CheckoutModal.css
+++ b/src/components/modal/checkout/CheckoutModal.css
@@ -19,9 +19,6 @@
   margin-bottom: 0;
 }
 
-.header {
-  padding-bottom: 5px;
-}
 .footer {
-  padding-top: 5px;
+  padding-top: 10px;
 }
