--- a/src/components/modal/order/OrdersModal.css
+++ b/src/components/modal/order/OrdersModal.css
@@ -3,6 +3,13 @@
   font-weight: 400;
 }
 
-.button {
-  text-align: center;
+.orders :first-child {
+  margin: 0;
+}
+
+.buttons {
+  padding-top: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
