--- a/src/components/modal/order/OrdersModalOrder.css
+++ b/src/components/modal/order/OrdersModalOrder.css
@@ -1,3 +1,7 @@
+.order :first-child {
+  margin: 0;
+}
+
 .heading {
   font-size: 1.1rem;
   margin: 7.5px 0;
